src/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/adroll__RollWorks_Tracking_Data_Aggregation__c.object-meta.xml
<CustomObject>
    <description>Object stores the Aggregation of Tracking Data and Account Level Tracking Data sent by AdRoll. The data is aggregated per month per Lead/Contact/Account</description>
    <label>RollWorks Tracking Data Aggregation</label>
    <nameField>
        <displayFormat>ARTDA-{000000000}</displayFormat>
        <label>RollWorks Tracking Data Aggregation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdRollTrackingDataAggregation__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>