src/objects/adroll__RollWorks_Tracking_Data_Aggregation__c/fields/adroll__Xdevice_EmailList__c.field-meta.xml
<CustomField>
    <fullName>adroll__Xdevice_EmailList__c</fullName>
    <description>Email Addresses for the Tracking Data</description>
    <inlineHelpText>Email Addresses for the Tracking Data</inlineHelpText>
    <label>Emails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>